--- a/ux.html
+++ b/ux.html
@@ -111,7 +111,7 @@
 <p><span class="badge badge-light">Kerala, India  North America</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/McFadyenDigital/743999698471068-ux-designer-contract-'>McFadyen Digital UX Designer (Contract) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/McFadyenDigital/743999698471068-ux-designer-contract-'>McFadyen Digital UX Designer (Contract) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Brazil  North America</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -163,7 +163,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/gitlab/jobs/4495951002'>Job Application for UX Manager, Dev at GitLab</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/gitlab/jobs/4495951002'>Job Application for UX Manager, Dev at GitLab</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -179,7 +179,7 @@
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oXJVafwv&__jvst=Employee+Referral&__jvsd=sNYIIhwX&__jvsc=Twitter&bid=nMk5nMwP'>NICE Careers - UX Expert</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oXJVafwv&__jvst=Employee+Referral&__jvsd=sNYIIhwX&__jvsc=Twitter&bid=nMk5nMwP'>NICE Careers - UX Expert</a></h5> 
 <p><span class="badge badge-light">Raanana, Israel</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -195,7 +195,7 @@
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/25156-UX-Designer?source=feed'>
+<h5><a href='https://dribbble.com/jobs/25156-UX-Designer?source=feed'>
       UX Designer at NovoEd - 854 Folsom St, San Francisco, CA 94107 - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
@@ -269,7 +269,7 @@
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://nordcloud-poland.breezy.hr/p/089938b7306b01-ux-designer'>UX Designer at Nordcloud Poland</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nordcloud-poland.breezy.hr/p/089938b7306b01-ux-designer'>UX Designer at Nordcloud Poland</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -301,7 +301,7 @@
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BrandungGmbHCoKG/743999698260384-ux-designer-concepter-w-m-d-'>brandung GmbH & Co. KG UX Designer / Concepter (w/m/d) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BrandungGmbHCoKG/743999698260384-ux-designer-concepter-w-m-d-'>brandung GmbH & Co. KG UX Designer / Concepter (w/m/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">K?ln, Deutschland  Berlin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -309,7 +309,7 @@
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://uxjobs.fr/job/3595-consultant-ux-h-f'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uxjobs.fr/job/3595-consultant-ux-h-f'>
         [CDI] Consultant UX H/F - MOBIAPPS - UXJobs.fr
     </a></h5> 
 <p><span class="badge badge-light">France Paris</span></p>
@@ -339,11 +339,11 @@
 <p><span class="badge badge-light">Jakarta Jakarta Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/McFadyenDigital/743999698130783-ux-designer-contract-'>McFadyen Digital UX Designer (Contract) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/McFadyenDigital/743999698130783-ux-designer-contract-'>McFadyen Digital UX Designer (Contract) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Brazil  North America</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/freelancer/e584761'>Stellenangebot: UX / UI Designer (m/w/d) (Hamburg) ? dasauge? Stellenmarkt</a></h5> 
+<h5><a href='https://dasauge.de/jobs/stellenangebote/freelancer/e584761'>Stellenangebot: UX / UI Designer (m/w/d) (Hamburg) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light">Hamburg Hamburg</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -359,7 +359,7 @@
 <p><span class="badge badge-light">Kenya</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584752'>Stellenangebot: (Junior) UX Designer (M/W/D) (Hamburg) ? dasauge? Stellenmarkt</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584752'>Stellenangebot: (Junior) UX Designer (M/W/D) (Hamburg) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light">Hamburg Hamburg</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -371,7 +371,7 @@
 <p><span class="badge badge-light">Jakarta Selatan, Indonesia  Indonesia Indonesia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/flatironschoolcareers/jobs/4497947002'>Job Application for UX/UI Design Coach, London at Flatiron School</a></h5> 
+<h5><a href='https://boards.greenhouse.io/flatironschoolcareers/jobs/4497947002'>Job Application for UX/UI Design Coach, London at Flatiron School</a></h5> 
 <p><span class="badge badge-light">London London  London</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -425,7 +425,7 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/tivix/7840075b-47be-4305-9e55-979f6f2a71aa'>Tivix - Mid-level or Senior UI/UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tivix/7840075b-47be-4305-9e55-979f6f2a71aa'>Tivix - Mid-level or Senior UI/UX Designer</a></h5> 
 <p><span class="badge badge-light">New York  San Francisco NYCLondon</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -437,7 +437,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://theorem.applytojob.com/apply/eNIN241nlp/UX-Researcher-Consultant'>UX Researcher (Consultant) - Theorem, LLC - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://theorem.applytojob.com/apply/eNIN241nlp/UX-Researcher-Consultant'>UX Researcher (Consultant) - Theorem, LLC - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
