--- a/data-science.html
+++ b/data-science.html
@@ -71,6 +71,10 @@
   
       
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698531141-sr-big-data-developer-w-data-science-for-leading-global-sportswear-co-w2-only-no-c2c-'>Aroghia Group Sr. Big Data Developer /w Data Science for Leading Global Sportswear Co. -- W2 only, no C2C! | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://lana-labs.join.com/jobs/469684-teamlead-data-science-und-consulting-f-m-d'>Job @ Lana Labs (Berlin): Teamlead Data Science & ... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -117,7 +121,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698464953-data-integration-manager-data-science-'>Publicis Groupe Data Integration Manager (Data Science) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698464953-data-integration-manager-data-science-'>Publicis Groupe Data Integration Manager (Data Science) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Warszawa, Polska</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -157,7 +161,7 @@
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/wealthfront/ca0ca52c-374c-4e01-b249-3c73813e6907'>Wealthfront - Data Science - New College Graduate</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/wealthfront/ca0ca52c-374c-4e01-b249-3c73813e6907'>Wealthfront - Data Science - New College Graduate</a></h5> 
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -193,7 +197,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/qpiyjwqrdo3bpij3oafjfk71ic'>Senior Data Scientist ($225k) - HealthTech | Averity</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/qpiyjwqrdo3bpij3oafjfk71ic'>Senior Data Scientist ($225k) - HealthTech | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -213,7 +217,7 @@
 <p><span class="badge badge-light">United States  Austin, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999698409196-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999698409196-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -352,7 +356,7 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/shopify/e6a7b8c7-8c33-4566-9abb-94fc1a4d30e0'>Shopify - Senior Data Scientist (Multiple Roles)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/shopify/e6a7b8c7-8c33-4566-9abb-94fc1a4d30e0'>Shopify - Senior Data Scientist (Multiple Roles)</a></h5> 
 <p><span class="badge badge-light">Toronto, Canada</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -447,7 +451,7 @@ and?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://hackerearthjobs.recruiterbox.com/jobs/fk0fl9w'>
+<h5><a href='http://hackerearthjobs.recruiterbox.com/jobs/fk0fl9w'>
     Data Science Intern at HackerEarth
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
@@ -465,7 +469,7 @@ and?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://so1.join.com/jobs/461344-data-scientist-m-f-x'>Job @ SO1 (Berlin): Data Scientist (m/f/x) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://so1.join.com/jobs/461344-data-scientist-m-f-x'>Job @ SO1 (Berlin): Data Scientist (m/f/x) | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -486,10 +490,6 @@ CA.</p>
 <h5><a href='https://boards.greenhouse.io/nubank/jobs/1776021?gh_src=d1949a901'>Job Application for Data Scientist at Nubank</a></h5> 
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on:: 2019-10-26</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/jdcom/jobs/4495588002'>Job Application for Data Scientist - Business Growth at JD.com</a></h5> 
-<p><span class="badge badge-light">Mountain View, CA</span></p>
-<p>Posted on: 2019-10-26</p>
 <hr/>
 
 
